@@ -1,4 +1,5 @@
 0.12
+ - Add parameter 'step' to Input.
  - Fix doc of Element::A.
  - Fix doc of 'data_type' parameter.
  - Regen MANIFEST file.
